k8s/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_3ce402803bfd
          # env:
            # 카카오 환경 변수
            # - name: REACT_APP_REST_API_KEY
            #   valueFrom:
            #     secretKeyRef:
            #       name: kakao-credentials
            #       key: REACT_APP_REST_API_KEY
            # - name: REACT_APP_REDIRECT_URL
            #   valueFrom:
            #     configMapKeyRef:
            #       name: app-config
            #       key: REACT_APP_REDIRECT_URL              
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
